fix: fix menu height on mobile devices

--- a/src/widgets/Menu/menu.module.css
+++ b/src/widgets/Menu/menu.module.css
@@ -3,7 +3,6 @@
 	top: 0;
 	left: -100%;
 	width: 100%;
-	height: 100%;
 	z-index: 10000;
 	visibility: hidden;
 	opacity: 0;
@@ -23,10 +22,7 @@
 	max-width: 345px;
 	width: 100%;
 	background-color: var(--dark-pink-color);
-	height: 100%;
-	padding-top: 140px;
-	padding-left: 40px;
-	padding-right: 5px;
+	padding: 140px 5px 40px 40px;
 	transition: all 0.66s;
 	z-index: 10000;
 }
@@ -82,7 +78,7 @@
 }
 
 .main {
-	height: calc(100vh - 180px);
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
